--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -76,4 +76,23 @@
 pre.shiki {
     padding: 15px;
     border-radius: 0.5rem;
+    white-space: pre-wrap;
+}
+
+.twoslash-popup-docs {
+    width: 500px;
+}
+
+code {
+    counter-reset: step;
+    counter-increment: step 0;
+}
+
+code .line::before {
+    content: counter(step);
+    counter-increment: step;
+    width: 1rem;
+    margin-right: 1.5rem;
+    display: inline-block;
+    text-align: right;
 }
